dashboard/test_output.txt

> dashboard@0.1.0 test
> jest __tests__/api/trigger-agent.test.ts

FAIL __tests__/api/trigger-agent.test.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /Users/sam/code/soulcaster/dashboard/node_modules/jose/dist/browser/index.js:1
    export { compactDecrypt } from './jwe/compact/decrypt.js';
    ^^^^^^

    SyntaxError: Unexpected token 'export'

      20 |       if (account) {
      21 |         token.accessToken = account.access_token;
    > 22 |       }
         |        ^
      23 |       return token;
      24 |     },
      25 |     async session({ session, token }) {

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (node_modules/openid-client/lib/client.js:9:14)
      at Object.<anonymous> (node_modules/openid-client/lib/issuer.js:5:19)
      at Object.<anonymous> (node_modules/openid-client/lib/index.js:1:16)
      at Object.<anonymous> (node_modules/next-auth/core/lib/oauth/callback.js:7:21)
      at Object.<anonymous> (node_modules/next-auth/core/routes/callback.js:8:40)
      at Object.<anonymous> (node_modules/next-auth/core/routes/index.js:37:40)
      at Object.<anonymous> (node_modules/next-auth/core/index.js:10:38)
      at Object.<anonymous> (node_modules/next-auth/next/index.js:9:13)
      at Object.<anonymous> (node_modules/next-auth/index.js:25:37)
      at Object.<anonymous> (lib/auth.ts:22:19)
      at Object.<anonymous> (__tests__/api/trigger-agent.test.ts:7:15)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.559 s
Ran all test suites matching __tests__/api/trigger-agent.test.ts.
